--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 DB_DIR = "/scratch/eecs595f25_class_root/eecs595f25_class/llada_data"
 RAW_DATA_PATH = "/scratch/eecs595f25_class_root/eecs595f25_class/llada_data/synthetic_text_to_sql/synthetic_text_to_sql_test.snappy.parquet"
 DB_NAME = "synthetic_SQL_db"
+
+WANDB_API_KEY = '23e2578743ea49535467e63d79c18ab8cbae8e82'
